Import – Make sure duplicate entries don't break import. Show object counts in preview and success message. Allow collapsing and expanding all items

--- a/css/timemanager.scss
+++ b/css/timemanager.scss
@@ -40,6 +40,8 @@
 
 	.tools & {
 		padding-right: 0;
+		padding-left: 0;
+		margin-left: 10px;
 	}
 
 	a:hover,
